<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".ui.fragment.ExchangeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <TextView
            android:id="@+id/currency1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/currency1"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />

        <EditText
            android:id="@+id/value1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:digits="0123456789."
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="20"
            android:maxLines="1"
            tools:ignore="LabelFor,TextFields" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/ic_exchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="12dp"
        android:src="@drawable/ic_exchange"
        tools:ignore="ContentDescription" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/currency2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/currency2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/value2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:text="@string/value2"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor,TextFields" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/exchange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/exchange"
        app:cornerRadius="10dp" />

</LinearLayout>